Details
-
Bug
-
Status: Closed (View Workflow)
-
Critical
-
Resolution: Fixed
-
11.4
Description
--source include/have_innodb.inc
|
--source include/have_binlog_format_row.inc
|
--source include/master-slave.inc
|
|
|
CREATE TABLE t1 ( c1 varchar(10) NOT NULL, c2 varchar(10) DEFAULT NULL, c3 decimal(12,4) DEFAULT NULL, PRIMARY KEY (c1) ) ENGINE=InnoDB ; |
INSERT INTO t1(c1) VALUES (''); |
SET binlog_row_image=FULL_NODUP; |
UPDATE t1 SET c2=''; |
|
|
--sync_slave_with_master |
|
11.4.0 6b2287fff23fbdc362499501c562f01d0d2db52e (Debug) |
#0 __GI_raise (sig=sig@entry=6) at ../sysdeps/unix/sysv/linux/raise.c:50
|
#1 0x000014778d89f859 in __GI_abort () at abort.c:79
|
#2 0x000014778d89f729 in __assert_fail_base (fmt=0x14778da35588 "%s%s%s:%u: %s%sAssertion `%s' failed.\n%n", assertion=0x557dec4759e0 "marked_for_write_or_computed()", file=0x557dec473bc3 "/test/11.4_dbg/sql/field.cc", line=3470, function=<optimized out>) at assert.c:92
|
#3 0x000014778d8b0fd6 in __GI___assert_fail (assertion=assertion@entry=0x557dec4759e0 "marked_for_write_or_computed()", file=file@entry=0x557dec473bc3 "/test/11.4_dbg/sql/field.cc", line=line@entry=3470, function=function@entry=0x557dec477208 "bool Field_new_decimal::store_value(const my_decimal*, int*)") at assert.c:101
|
#4 0x0000557deb938eb9 in Field_new_decimal::store_value (this=this@entry=0x147748049ec0, decimal_value=0x557decd4e3a0 <decimal_zero>, native_error=native_error@entry=0x14778257807c) at /test/11.4_dbg/sql/field.cc:3470
|
#5 0x0000557deb93bc4f in Field_new_decimal::store_value (this=0x147748049ec0, decimal_value=<optimized out>) at /test/11.4_dbg/sql/field.cc:3518
|
#6 0x0000557deb93bc9a in Field_new_decimal::reset (this=<optimized out>) at /test/11.4_dbg/sql/field.cc:3423
|
#7 0x0000557debafe34b in unpack_field (tabledef=tabledef@entry=0x147748928068, f=f@entry=0x147748049ec0, st=st@entry=0x147782578160, field_idx=field_idx@entry=2) at /test/11.4_dbg/sql/rpl_record.cc:204
|
#8 0x0000557debafecd7 in unpack_row (rgi=rgi@entry=0x147748000ce0, table=0x1477480497f8, colcnt=<optimized out>, row_data=0x1477480183f8 "\376", cols=cols@entry=0x147748032d00, current_row_end=current_row_end@entry=0x147748032da8, master_reclength=0x147748032d38, row_end=0x1477480183fc "\245\245\245\245") at /test/11.4_dbg/sql/rpl_record.cc:378
|
#9 0x0000557debafa200 in Rows_log_event::unpack_current_row (rgi=0x147748000ce0, this=0x147748032c98) at /test/11.4_dbg/sql/log_event.h:4875
|
#10 Rows_log_event::find_row (this=this@entry=0x147748032c98, rgi=rgi@entry=0x147748000ce0) at /test/11.4_dbg/sql/log_event_server.cc:7374
|
#11 0x0000557debafb1f8 in Update_rows_log_event::do_exec_row (this=0x147748032c98, rgi=0x147748000ce0) at /test/11.4_dbg/sql/log_event_server.cc:7868
|
#12 0x0000557debaeda83 in Rows_log_event::do_apply_event (this=0x147748032c98, rgi=0x147748000ce0) at /test/11.4_dbg/sql/log_event_server.cc:5049
|
#13 0x0000557debae4a53 in Log_event::apply_event (this=this@entry=0x147748032c98, rgi=rgi@entry=0x147748000ce0) at /test/11.4_dbg/sql/log_event.cc:3876
|
#14 0x0000557deb55b543 in apply_event_and_update_pos_apply (ev=ev@entry=0x147748032c98, thd=thd@entry=0x147748001af8, rgi=rgi@entry=0x147748000ce0, reason=reason@entry=0) at /test/11.4_dbg/sql/slave.cc:3910
|
#15 0x0000557deb563deb in apply_event_and_update_pos (ev=ev@entry=0x147748032c98, thd=thd@entry=0x147748001af8, rgi=rgi@entry=0x147748000ce0) at /test/11.4_dbg/sql/slave.cc:4086
|
#16 0x0000557deb564810 in exec_relay_log_event (thd=0x147748001af8, rli=rli@entry=0x557def0777c0, serial_rgi=serial_rgi@entry=0x147748000ce0) at /test/11.4_dbg/sql/slave.cc:4496
|
#17 0x0000557deb567c2b in handle_slave_sql (arg=arg@entry=0x557def075700) at /test/11.4_dbg/sql/slave.cc:5696
|
#18 0x0000557debc22ae0 in pfs_spawn_thread (arg=0x14775000eb78) at /test/11.4_dbg/storage/perfschema/pfs.cc:2201
|
#19 0x000014778ddb0609 in start_thread (arg=<optimized out>) at pthread_create.c:477
|
#20 0x000014778d99c133 in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95
|
Attachments
Issue Links
- is caused by
-
MDEV-32589 FULL_NODUP mode for binlog_row_image
-
- Closed
-
- relates to
-
MDEV-33135 Refactor Field::reset()
-
- Open
-