MDEV-33049 PR-2953 review commit

This is a refinement of suggested fixes by LiBing.
I think we've safer with leaving the assert function intact, and
instead prepare to satisfy its assert in a caller.